# animalitos-results-scraper

./: Cargo.toml  README.md  main.py  results.csv
src/: main.rs
