[package]
name = "animalitos-results-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
scraper = "0.19.0"
